feat: backport to jdk8