@@ -1,11 +1,12 @@
 package org.bsc.langgraph4j;
 
+import lombok.Value;
+import lombok.var;
 import org.bsc.langgraph4j.state.AgentState;
 import org.junit.jupiter.api.Test;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.bsc.langgraph4j.GraphState.END;
 import static org.bsc.langgraph4j.action.EdgeAction.edge_async;
@@ -18,10 +19,35 @@ import static org.junit.jupiter.api.Assertions.*;
 public class LangGraphTest
 {
     <State extends AgentState> List<Map.Entry<String,Object>> sort(State state ) {
-        return state.data().entrySet().stream().sorted(Map.Entry.comparingByKey()).toList();
+        return state.getData().entrySet().stream()
+                .sorted(Map.Entry.comparingByKey())
+                .collect(Collectors.toList());
     }
 
-    record BaseAgentState( Map<String,Object> data ) implements AgentState {}
+    <K,V> Map<K,V> mapOf() {
+        return Collections.emptyMap();
+    }
+    <K,V> Map<K,V> mapOf( K key, V value  ) {
+        var result = new HashMap<K, V>();
+        result.put(key, value);
+        return Collections.unmodifiableMap(result);
+    }
+    <K,V> Map<K,V> mapOf( K key, V value, K key1, V value1 ) {
+        var result = new HashMap<K, V>();
+        result.put(key, value);
+        result.put(key1, value1);
+        return Collections.unmodifiableMap(result);
+    }
+
+    @Value
+    static class BaseAgentState implements AgentState {
+        Map<String,Object> data;
+
+        @Override
+        public Map<String, Object> getData() {
+            return data;
+        }
+    }
 
     @Test
     void testValidation() throws Exception {
@@ -40,7 +66,7 @@ public class LangGraphTest
         workflow.addNode("agent_1", node_async((state ) -> {
             System.out.print("agent_1 ");
             System.out.println(state);
-            return Map.of("prop1", "test");
+            return mapOf("prop1", "test");
         }) ) ;
 
         assertNotNull(workflow.compile());
@@ -62,7 +88,7 @@ public class LangGraphTest
             System.out.print( "agent_2: ");
             System.out.println( state );
 
-            return Map.of("prop2", "test");
+            return mapOf("prop2", "test");
         }));
 
         workflow.addEdge("agent_2", "agent_3");
@@ -71,7 +97,7 @@ public class LangGraphTest
         System.out.println(exception.getMessage());
 
         exception = assertThrows(GraphStateException.class, () ->
-            workflow.addConditionalEdge("agent_1", edge_async( state  -> "agent_3" ), Map.of() )
+            workflow.addConditionalEdge("agent_1", edge_async( state  -> "agent_3" ), mapOf() )
         );
         System.out.println(exception.getMessage());
 
@@ -86,18 +112,18 @@ public class LangGraphTest
         workflow.addNode("agent_1", node_async( state -> {
             System.out.print( "agent_1");
             System.out.println( state );
-            return Map.of("prop1", "test");
+            return mapOf("prop1", "test");
         }));
 
         workflow.addEdge( "agent_1",  END);
 
         var app = workflow.compile();
 
-        var result = app.invoke( Map.of( "input", "test1") );
+        var result = app.invoke( mapOf( "input", "test1") );
         assertTrue( result.isPresent() );
 
-        System.out.println( result.get().data() );
-        var  expected = Map.of("input", "test1","prop1","test");
+        System.out.println( result.get().getData() );
+        var  expected = mapOf("input", "test1","prop1","test");
 
         assertIterableEquals( expected.entrySet(), sort(result.get()) );
         //assertDictionaryOfAnyEqual( expected, result.data )
